[package]
name = "grache2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.4", features = ["headers"] }
tokio = { version = "1.25.0", features = ["full"] }
tower-http = { version = "0.3.5", features = ["cors"] }
