[package]
name = "grache2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.4", features = ["headers"] }
axum-macros = "0.3.2"
graphql-parser = "0.4.0"
serde = { version = "1.0.91", features = ["derive"] }
serde_json = { version = "1.0.91" }
tokio = { version = "1.25.0", features = ["full"] }
tower-http = { version = "0.3.5", features = ["cors"] }
